kustomization/overlays/prod/external-services/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nas-svc
  namespace: minio
spec:
  externalName: chanttogreen.hogs.tswn.us
  ports:
    - name: http
      port: 80
  type: ExternalName
