kustomization/overlays/prod/external-services/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: external-services-ingress
spec:
  rules:
    - host: garage-admin.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: garage-admin-svc
                port:
                  name: web
            path: /
            pathType: Prefix
    - host: homeassistant.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: homeassistant-svc
                port:
                  name: web
            path: /
            pathType: Prefix
    - host: nas.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: nas-svc
                port:
                  name: web
            path: /
            pathType: Prefix
    - host: opensprinkler.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: opensprinkler-svc
                port:
                  name: web
            path: /
            pathType: Prefix
